prevent weird tags alignment

--- a/app/assets/stylesheets/components/_resource.scss
+++ b/app/assets/stylesheets/components/_resource.scss
@@ -108,6 +108,7 @@
     li {
       margin: 0;
       padding: 0;
+      display: inline-flex;
       strong {
         color: #555;
       }
